--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,28 +1,18 @@
 apply plugin: 'groovy'
-apply plugin: 'maven'
+
+apply plugin: 'com.github.dcendents.android-maven'
+group = GROUP
+
 
 dependencies {
     implementation gradleApi()
     implementation localGroovy()
     implementation 'com.android.tools.build:gradle:3.1.2'
-    implementation 'org.ow2.asm:asm:7.1'
-    implementation 'org.ow2.asm:asm-commons:7.1'
-    implementation 'org.ow2.asm:asm-util:7.1'
+    implementation 'org.ow2.asm:asm:7.3.1'
+    implementation 'org.ow2.asm:asm-commons:7.3.1'
+    implementation 'org.ow2.asm:asm-util:7.3.1'
 }
 
 repositories {
     mavenCentral()
 }
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            pom.groupId = 'cn.hikyson.methodcanary'
-            pom.artifactId = 'plugin'
-            pom.version = 0.1
-            repository(url: uri('../repos'))
-        }
-    }
-}
-
-apply from: rootProject.file('gradle/gradleplugin-jcenter-push.gradle')
